--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "eslint-check": "eslint'",
-    "eslint-fix": "eslint --fix",
-    "prettier-check": "prettier --check src",
-    "prettier-format": "prettier --write src",
-    "lint": "bun prettier-check && bun eslint-check",
-    "lint-fix": "bun prettier-format && bun eslint-fix"
+    "eslint:check": "eslint'",
+    "eslint:fix": "eslint --fix",
+    "prettier:check": "prettier --check src",
+    "prettier:fix": "prettier --write src",
+    "lint": "bun prettier:check && bun eslint:check",
+    "lint-fix": "bun prettier:fix && bun eslint:fix"
   },
   "license": "MIT",
   "devDependencies": {
@@ -24,11 +24,11 @@
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0",
-    "vite": "^5.2.10",
+    "vite": "^5.2.11",
     "vite-plugin-solid": "^2.10.2"
   },
   "dependencies": {
-    "@solidjs/router": "^0.13.2",
+    "@solidjs/router": "^0.13.3",
     "solid-js": "^1.8.17"
   }
 }
