--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "eslint:check": "eslint'",
+    "eslint:check": "eslint",
     "eslint:fix": "eslint --fix",
     "prettier:check": "prettier --check src",
     "prettier:fix": "prettier --write src",
@@ -16,11 +16,14 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "eslint": "^9.37.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-solid": "^0.14.5",
+    "jiti": "^2.6.1",
     "pnpm": "^10.18.2",
     "prettier": "^3.6.2",
     "typescript": "^5.9.3",
